--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,27 @@
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="Ebac logo">
             <p class="hero__text">O maior evento de tecnologia começa em 10d 12h 25m 6s</p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Localização</b>
+                        Alliazn Parque - Barra Funda - São Paulo
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Preço</b>
+                        A partir de R$120
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Quando</b>
+                        12/12/2022 ás 19hrs
+                    </li>
+                </ul>
+                <a href="#" class="button button--primary">
+                    Garanta a sua vaga
+                </a>
         </div>
+        </div>
+        
     </header>
     <script src="./scripts/main.js"></script>
 </body>
