--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                 <h2 class="event__details__title">UI/UX</h2>
                 <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo velit, tempore deleniti qui assumenda provident. Commodi pariatur unde corrupti consectetur alias! Autem mollitia dicta aliquam beatae, nesciunt eligendi aut ex?</p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-End" />
+            <img class="event__image" src="./images/ui-ux.png" alt="ui-ux" />
         </div>
     </section>
     <section class="event event--data-science" >
@@ -60,7 +60,7 @@
                 <h2 class="event__details__title">Data Science</h2>
                 <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo velit, tempore deleniti qui assumenda provident. Commodi pariatur unde corrupti consectetur alias! Autem mollitia dicta aliquam beatae, nesciunt eligendi aut ex?</p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-End" />
+            <img class="event__image" src="./images/data.png" alt="Data science" />
         </div>
     </section>
     <section class="event event--back-end event--image-left" >
@@ -69,7 +69,7 @@
                 <h2 class="event__details__title">Front-End</h2>
                 <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo velit, tempore deleniti qui assumenda provident. Commodi pariatur unde corrupti consectetur alias! Autem mollitia dicta aliquam beatae, nesciunt eligendi aut ex?</p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-End" />
+            <img class="event__image" src="./images/backend.png" alt="Backend />
         </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
