--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                 <h2 class="event__details__title">Front-End</h2>
                 <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo velit, tempore deleniti qui assumenda provident. Commodi pariatur unde corrupti consectetur alias! Autem mollitia dicta aliquam beatae, nesciunt eligendi aut ex?</p>
             </div>
-            <img class="event__image" src="./images/backend.png" alt="Backend />
+            <img class="event__image" src="./images/backend.png" alt="Backend"/>
         </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
