--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
     <section class="event event--back-end event--image-left" >
         <div class="container" data-aos="fade-left">
             <div class="event__details">
-                <h2 class="event__details__title">Front-End</h2>
+                <h2 class="event__details__title">Back-End</h2>
                 <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo velit, tempore deleniti qui assumenda provident. Commodi pariatur unde corrupti consectetur alias! Autem mollitia dicta aliquam beatae, nesciunt eligendi aut ex?</p>
             </div>
             <img class="event__image" src="./images/backend.png" alt="Backend"/>
